syntax = "proto3";

package pb;

option go_package = "./;pb";

message Empty {
}

message CommonResult {
  string error = 1;
  string errcode = 2;
  int32 httpcode = 3;
}

message Device {
  string id = 1;
  string userID = 2;
  string displayName = 3;
  string deviceType = 4;
  bool isHuman = 5;
  string identifier = 6;
  int64 createTs = 7;
  int64 lastActiveTs = 8;
}

message Event {
  string roomID = 1;
  string eventID = 2;
  int64 eventNID = 3;
  int64 domainOffset = 4;
  string sender = 5;
  string type = 6;
  string stateKey = 7;
  bytes content = 8;
  string redacts = 9;
  int64 depth = 10;
  bytes unsigned = 11;
  int64 originServerTS = 12;
  string Origin = 13;
  string redactsSender = 14;
}

message ClientEvent {
  bytes content = 1;
  string eventID = 2;
  int64 eventNID = 3;
  int64 domainOffset = 4;
  int64 depth = 5;
  int64 originServerTS = 6;
  string roomID = 7;
  string sender = 8;
  string stateKey = 9;
  string type = 10;
  string redacts = 11;
  string hint = 12;
  bool visible = 13;
  bytes unsigned = 14;
  int64 eventOffset = 15;
}
