syntax = "proto3";

package pb;

option go_package = "./;pb";

import "common.proto";

service RoomServer {
  rpc QueryEventsByID (QueryEventsByIDReq) returns (QueryEventsByIDRsp) {}
  rpc QueryRoomEventByID (QueryRoomEventByIDReq) returns (QueryRoomEventByIDRsp) {}
  rpc QueryJoinRooms (QueryJoinRoomsReq) returns (QueryJoinRoomsRsp) {}
  rpc QueryRoomState (QueryRoomStateReq) returns (QueryRoomStateRsp) {}
  rpc QueryBackFillEvents (QueryBackFillEventsReq) returns (QueryBackFillEventsRsp) {}
  rpc QueryEventAuth (QueryEventAuthReq) returns (QueryEventAuthRsp) {}

  rpc SetRoomAlias (SetRoomAliasReq) returns (SetRoomAliasRsp) {}
  rpc GetAliasRoomID (GetAliasRoomIDReq) returns (GetAliasRoomIDRsp) {}
  rpc RemoveRoomAlias (RemoveRoomAliasReq) returns (RemoveRoomAliasRsp) {}
  rpc AllocRoomAlias (AllocRoomAliasReq) returns (AllocRoomAliasRsp) {}
  rpc InputRoomEvents (InputRoomEventsReq) returns (InputRoomEventsRsp) {}
}

message QueryEventsByIDReq {
  repeated string eventIDs = 1;
}

message QueryEventsByIDRsp {
  repeated string eventIDs = 1;
  repeated Event events = 2;
}

message QueryRoomEventByIDReq {
  string eventID = 1;
  string roomID = 2;
}

message QueryRoomEventByIDRsp {
  string eventID = 1;
  string roomID = 2;
  Event event = 3;
}

message QueryJoinRoomsReq {
  string userID = 1;
}

message QueryJoinRoomsRsp {
  string userID = 1;
  repeated string rooms = 2;
}

message QueryRoomStateReq {
  string roomID = 1;
}

message QueryRoomStateRsp {
  string roomID = 1;
  bool roomExists = 2;
  Event creator = 3;
  Event joinRule = 4;
  Event historyVisibility = 5;
  Event visibility = 6;
  Event name = 7;
  Event topic = 8;
  Event desc = 9;
  Event canonicalAlias = 10;
  Event power = 11;
  Event alias = 12;
  map<string, Event> join = 13;
  map<string, Event> leave = 14;
  map<string, Event> invite = 15;
  map<string, Event> thirdInvite = 16;
  Event avatar = 17;
  Event guestAccess = 18;
}

message QueryBackFillEventsReq {
  string eventID = 1;
  int64 limit = 2;
  string roomID = 3;
  string dir = 4;
  string domain = 5;
  string origin = 6;
}

message QueryBackFillEventsRsp {
  string error = 1;
  string origin = 2;
  int64 originServerTs = 3;
  repeated Event pdus = 4;
}

message QueryEventAuthReq {
  string eventID = 1;
}

message QueryEventAuthRsp {
  repeated Event authEvents = 1;
}

message SetRoomAliasReq {
  string userID = 1;
  string alias = 2;
  string roomID = 3;
}

message SetRoomAliasRsp {
  bool aliasExists = 1;
}

message GetAliasRoomIDReq {
  string alias = 1;
}

message GetAliasRoomIDRsp {
  string roomID = 1;
}

message RemoveRoomAliasReq {
  string userID = 1;
  string alias = 2;
}

message RemoveRoomAliasRsp {
}

message AllocRoomAliasReq {
  string userID = 1;
  string alias = 2;
  string roomID = 3;
}

message AllocRoomAliasRsp {
  bool aliasExists = 1;
}

message InputRoomEventsReq {
  string roomID = 1;
  int32 kind = 2;
  bool trust = 3;
  TransactionID txnID = 4;
  BulkEvent BulkEvents = 5;
  repeated string query = 6;
}

message InputRoomEventsRsp {
  int32 errCode = 1;
  string errMsg = 2;
  int32 n = 3;
}
